--- a/aplikacija_za_recepte/package.json
+++ b/aplikacija_za_recepte/package.json
@@ -25,13 +25,16 @@
     "@types/mocha": "^10.0.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/sinon": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "jest": "^29.7.0",
     "jsdom": "^24.1.0",
+    "sinon": "^18.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
     "vitest": "^2.0.1"
